--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      # 4. Run tests
-      - name: Run Flutter tests
-        run: flutter test --coverage
+      # # 4. Run tests
+      # - name: Run Flutter tests
+      #   run: flutter test --coverage
 
       # 5. Run code generation
       - name: Run build_runner
