ci/cd code fixed

--- a/.github/workflows/flutter-ci.yml
+++ b/.github/workflows/flutter-ci.yml
@@ -42,30 +42,30 @@ jobs:
       - name: Build APK
         run: flutter build apk --release
 
-      # 7. Build iOS (unsigned, no codesign)
-      - name: Build iOS
-        run: flutter build ios --release --no-codesign
+      # # 7. Build iOS (unsigned, no codesign)
+      # - name: Build iOS
+      #   run: flutter build ios --release --no-codesign
 
-      # 8. Package unsigned iOS IPA
-      - name: Package unsigned iOS IPA
-        run: |
-          cd build/ios/iphoneos
-          mkdir Payload
-          cp -r Runner.app Payload/
-          zip -r unsigned-app.ipa Payload
+      # # 8. Package unsigned iOS IPA
+      # - name: Package unsigned iOS IPA
+      #   run: |
+      #     cd build/ios/iphoneos
+      #     mkdir Payload
+      #     cp -r Runner.app Payload/
+      #     zip -r unsigned-app.ipa Payload
 
       # 9. Upload Android APK as artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
-          name: zarbazan1-app-release
+          name: scube-app-release
           path: build/app/outputs/flutter-apk/**/*.apk
 
       # 10. Upload iOS IPA as artifact
       - name: Upload iOS IPA
         uses: actions/upload-artifact@v4
         with:
-          name: zarbazan1-ios-ipa
+          name: scube-ios-ipa
           path: build/ios/iphoneos/unsigned-app.ipa
 
       # 11. Publish GitHub Release
@@ -73,7 +73,7 @@ jobs:
         uses: softprops/action-gh-release@v1
         with:
           tag_name: v1.${{ github.run_number }}
-          name: "Zarbazan1 Release v1.${{ github.run_number }}"
+          name: "scube Release v1.${{ github.run_number }}"
           files: |
             build/app/outputs/flutter-apk/app-release.apk
             build/ios/iphoneos/unsigned-app.ipa
